--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -6,10 +6,9 @@
     tools:context="Fragment.FirstFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/listview_first_fragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textSize="100dp"
-        android:text="1번 강의 페이지" />
+        android:layout_height="wrap_content" />
 
 </FrameLayout>
