--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,25 @@
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewpager"
-        app:layout_constraintBaseline_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="220dp" />
+        android:layout_height="270dp" />
     
     <GridView
         android:id="@+id/gridview"
         android:layout_width="match_parent"
         android:numColumns="4"
+        android:layout_marginTop="40dp"
         app:layout_constraintTop_toBottomOf="@+id/viewpager"
         android:layout_height="wrap_content"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        app:layout_constraintTop_toBottomOf="@+id/gridview"
+        android:layout_width="match_parent"
+        android:layout_marginTop="30dp"
+        android:layout_height="wrap_content">
+
+        <include layout="@layout/bottom" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
