--- a/app/src/main/res/layout/viewpager_activity.xml
+++ b/app/src/main/res/layout/viewpager_activity.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="220dp"
-        android:id="@+id/imageview"
-        android:layout_marginTop="10dp"/>
+        android:layout_height="280dp"
+        android:layout_marginTop="10dp"
+        android:id="@+id/imageview" />
 
 </LinearLayout>
