--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,5 +5,51 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Auth.LoginActivity">
+    
+    <EditText
+        android:id="@+id/email_area"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="100dp"
+        android:hint="이메일"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/password_area"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="50dp"
+        android:hint="비밀번호"
+        app:layout_constraintTop_toBottomOf="@+id/email_area"
+        android:inputType="textPassword"/>
+    
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:id="@+id/login_button"
+        android:text="로그인"
+        android:textColor="#ffffff"
+        android:textSize="15dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        app:layout_constraintTop_toBottomOf="@id/password_area"
+        android:background="#92BCAF" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/join_button"
+        app:layout_constraintTop_toBottomOf="@id/login_button"
+        android:layout_marginTop="30dp"
+        android:textSize="20dp"
+        android:padding="20dp"
+        android:gravity="center"
+        android:textColor="#92CFBF"
+        android:text="회원가입" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
