--- a/app/src/main/res/layout/activity_join_info.xml
+++ b/app/src/main/res/layout/activity_join_info.xml
@@ -4,40 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Auth.JoinActivity">
+    tools:context=".Auth.JoinInfoActivity">
 
     <EditText
-        android:id="@+id/join_email_area"
+        android:id="@+id/join_info_email_area"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="100dp"
-        android:hint="이메일"
+        android:hint="닉네임"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/join_password_area"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="50dp"
-        android:inputType="textPassword"
-        android:hint="비밀번호"
-        app:layout_constraintTop_toBottomOf="@id/join_email_area" />
 
     <Button
-        android:id="@+id/join_login_button"
+        android:id="@+id/join_info_login_button"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:textColor="#ffffff"
-        android:text="회원가입 "
+        android:text="회원가입 완료 "
         android:textSize="15dp"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="50dp"
-        app:layout_constraintTop_toBottomOf="@id/join_password_area"
+        app:layout_constraintTop_toBottomOf="@id/join_info_email_area"
         android:background="#92BCAF" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
