FirebaseFirestore review 연동 & XML 작성

--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -6,4 +6,32 @@
     android:layout_height="match_parent"
     tools:context=".Auth.MyActivity">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:id="@+id/profile_area"
+        app:layout_constraintTop_toTopOf="parent" >
+
+       <de.hdodenhof.circleimageview.CircleImageView
+           android:layout_width="80dp"
+           android:layout_height="80dp"
+           android:id="@+id/profile_image"
+           app:layout_constraintTop_toTopOf="parent"
+           app:layout_constraintLeft_toLeftOf="parent"
+           android:layout_margin="10dp"
+           android:src="@drawable/profile" />
+
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:id="@+id/nickname_area"
+           app:layout_constraintLeft_toRightOf="@+id/profile_image"
+           android:layout_margin="30dp"
+           android:textSize="20dp"
+           android:textStyle="bold"
+           app:layout_constraintTop_toTopOf="parent"
+           android:text="닉네임 영역" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
