--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -1,13 +1,23 @@
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.MarketInfo.ReviewFragment">
+    tools:context=".Fragment.MarketInfo.ReviewsFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="review" />
+        android:layout_height="wrap_content"
+        android:id="@+id/listview_review" />
+
+    <ImageView
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:id="@+id/write_button"
+        android:layout_marginRight="50dp"
+        android:layout_gravity="bottom|end"
+        android:src="@drawable/write_button"
+        android:layout_marginBottom="100dp" />
 
 </FrameLayout>
