--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.MarketInfo.ReviewsFragment">
+    tools:context=".Fragment.MarketInfo.ReviewFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <ListView
