--- a/app/src/main/res/layout/bottom.xml
+++ b/app/src/main/res/layout/bottom.xml
@@ -1,10 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:weightSum="4"
-    android:layout_height="70dp">
+    android:layout_height="70dp"
+    android:background="#ffffff"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:weightSum="4"
+        android:layout_height="50dp">
+
+        <ImageView
+            android:src="@drawable/bottom_1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_weight="1"
+            />
+
+        <ImageView
+            android:src="@drawable/bottom_2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_weight="1"
+            />
+
+        <ImageView
+            android:src="@drawable/bottom_3"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_weight="1"
+            />
+
+        <ImageView
+            android:src="@drawable/bottom_4"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:id="@+id/my_page" />
+
+    </LinearLayout>
     
+    
+    
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:weightSum="4" >
     <TextView
         android:layout_width="0dp"
         android:layout_height="match_parent"
@@ -27,13 +76,13 @@
         android:text="구매 내역"
         tools:ignore="Suspicious0dp" />
     <TextView
-        android:id="@+id/my_page"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:gravity="center"
         android:layout_weight="1"
         android:text="내정보"
         tools:ignore="Suspicious0dp" />
+    </LinearLayout>
 
 
 </LinearLayout>
