--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,12 +18,13 @@
         android:layout_width="match_parent"
         android:numColumns="4"
         app:layout_constraintTop_toBottomOf="@+id/viewpager"
+        android:verticalSpacing="@dimen/activity_vertical_margin"
         android:layout_height="wrap_content"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/notice_area"
         app:layout_constraintTop_toBottomOf="@+id/gridview"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
