--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="10dp"
-            android:textSize="15dp"
+            android:textSize="18dp"
             android:textStyle="bold"
             android:text="공지사항"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="공지사항입니다 어쩌고 저쩌구"
-            android:textSize="10dp"
+            android:textSize="12dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="13dp"
             android:layout_marginLeft="10dp"
@@ -65,17 +65,17 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="10dp"
-            android:textSize="15dp"
+            android:textSize="18dp"
             android:textStyle="bold"
-            android:text="회사정보"
+            android:text="새소식"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="회사정보입니다 어쩌고저쩌고 예시를 들기위해 만든 것"
-            android:textSize="10dp"
+            android:text="새로운 소식입니다 어쩌고저쩌고 예시를 들기위해 만든 것"
+            android:textSize="12dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="13dp"
             android:layout_marginLeft="10dp"
