--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -32,6 +32,14 @@
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:text="닉네임 영역" />
+
+        <Button
+            android:id="@+id/logout_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="로그아웃"
+            android:layout_marginTop="50dp"
+            app:layout_constraintTop_toBottomOf="@+id/nickname_area" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
