--- a/app/src/main/res/layout/bottom.xml
+++ b/app/src/main/res/layout/bottom.xml
@@ -14,6 +14,7 @@
         android:layout_height="50dp">
 
         <ImageView
+            android:id="@+id/home_btn"
             android:src="@drawable/bottom_1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -47,8 +48,7 @@
 
     </LinearLayout>
     
-    
-    
+
     
     <LinearLayout
         android:layout_width="match_parent"
