--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.FirstFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".Fragment.FirstFragment"
+    android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
     <ListView
         android:id="@+id/listview_first_fragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
 </FrameLayout>
