--- a/app/src/main/res/layout/activity_market_info.xml
+++ b/app/src/main/res/layout/activity_market_info.xml
@@ -85,8 +85,26 @@
         />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/zzim"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toBottomOf="@id/header_bottom_line" >
+        
+        <TextView
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="#FF0000"
+            android:layout_marginTop="10dp"
+            android:text="찜 버튼" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+        
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/menu_bar"
-        app:layout_constraintTop_toBottomOf="@+id/header_bottom_line"
+        app:layout_constraintTop_toBottomOf="@+id/zzim"
         android:layout_width="match_parent"
         android:layout_height="60dp">
 
