--- a/app/src/main/res/layout/bottom.xml
+++ b/app/src/main/res/layout/bottom.xml
@@ -23,6 +23,7 @@
             />
 
         <ImageView
+            android:id="@+id/test_btn"
             android:src="@drawable/bottom_2"
             android:layout_width="0dp"
             android:layout_height="match_parent"
