--- a/app/src/main/res/layout/activity_market_info.xml
+++ b/app/src/main/res/layout/activity_market_info.xml
@@ -91,6 +91,7 @@
         app:layout_constraintTop_toBottomOf="@id/header_bottom_line" >
         
         <TextView
+            android:id="@+id/header_zzim"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
