찜 기능 예외처리 및 데이터 가져오기

--- a/app/src/main/res/layout/bottom.xml
+++ b/app/src/main/res/layout/bottom.xml
@@ -23,7 +23,7 @@
             />
 
         <ImageView
-            android:id="@+id/test_btn"
+            android:id="@+id/zzim_btn"
             android:src="@drawable/bottom_2"
             android:layout_width="0dp"
             android:layout_height="match_parent"
